--- a/RestaurantReviews/Info.plist
+++ b/RestaurantReviews/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location to find restaurants around you</string>
 </dict>
 </plist>
